# notipy

./: .gitignore  README.md  notipy_email.py  pyproject.toml
notipy/: __init__.py  core.py
notipy/email/: __main__.py  core.py  gmail.py
notipy/phone/: core.py
